@@ -11,7 +11,9 @@ if [ -z "$SIGNINGPASS" ]; then
 	exit 1
 fi
 
-export MAVEN_OPTS="-Xmx4g -XX:ReservedCodeCacheSize=1g"
+if [ -z "$MAVEN_OPTS" ]; then
+	export MAVEN_OPTS="-Xmx4g -XX:ReservedCodeCacheSize=1g -XX:PermSize=512m -XX:MaxPermSize=1g -XX:MaxMetaspaceSize=1g"
+fi
 
 if [ -e "$HOME/ci/environment" ]; then
 	. "$HOME/ci/environment"
